--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#e4651d" />
+<!--    配合瀏覽器頂部顏色-->
+<!--    <meta name="theme-color" content="#1a5d8d"-->
+<!--          media="(prefers-color-scheme: light)">-->
+<!--    <meta name="theme-color" content="#06568F"-->
+<!--          media="(prefers-color-scheme: dark)">-->
     <meta
       name="description"
       content="Web site created using create-react-app"
